# weekpilot

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  KAGGLE_WRITEUP.docx  LICENSE  QUICKSTART.md  README.md  STRIDE.md  VIDEO_SCRIPT.docx  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
backend/: __init__.py  main.py
docs/: COMPETITION_COMPLIANCE_AND_LAUNCH.md  KAGGLE_WRITEUP.md  RATIONALE.md  VIDEO_SCRIPT.md  WEBSITE_WORKFLOW.md  WEB_APP_GUIDE.md
eval/: eval_cases.json  run_eval.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  markdown.tsx  styles.css
scripts/: security_scan.py
tests/: __init__.py  conftest.py  test_agents.py  test_mcp_server.py  test_memory.py  test_security.py  test_tools.py
weekpilot/: __init__.py  agent.py  model_config.py
weekpilot/agents/: __init__.py  message_drafter.py  research_agent.py  schedule_planner.py  task_triage.py
weekpilot/mcp_server/: __init__.py  server.py  tools_impl.py
weekpilot/memory/: __init__.py  consent_memory.py
weekpilot/models/: __init__.py  schemas.py
weekpilot/observability/: __init__.py  logger.py
weekpilot/security/: __init__.py  callbacks.py  consent.py  guardrails.py  pii_detector.py
weekpilot/tools/: __init__.py  message_tools.py  reminder_tools.py  task_tools.py  validators.py  weather_tools.py
